<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/our_mission"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#0E5FB7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/our_mission_body"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/our_vision"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:textColor="#0E5FB7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/our_vision_body"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>